--- a/index.css
+++ b/index.css
@@ -2,10 +2,10 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  transition: color 1s, background-color 1s
 }
 body * {
   font-family: 'Overpass Mono', monospace;
-  transition: background 0.2s;
 }
 main {
   flex: 1 0 auto;
