--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  transition: color 1s, background-color 1s
+  transition: color 1s, background-color 1s;
+  height: 100%;
 }
 body * {
   font-family: 'Overpass Mono', monospace;
